Fix stretching for images with greater height than width

--- a/css/match.css
+++ b/css/match.css
@@ -146,7 +146,6 @@ td.a-cell h2 {
 td.a-cell img {
     float: left;
     margin-right: 10px;
-    width: 100%;
     max-width: 150px;
 	max-height: 150px;
 	margin-bottom: 10px;
